# gmg

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  MANIFEST.in.old  MANIFEST.in~  README  README.md  README.rst  README~  build_pip.sh  codemeta.json  environment.yml  gmg.md  gmg.toml  gmg.yml  gmg.yml.old  gmg_logo_white.ai  gmt.history  meta.yaml.old  pyproject.toml  setup.cfg  setup.py  setup.py.old  setup.py~
SEISMIC_DATA/Well_1/: GeoSaltIndex.Well.1  LayerGeoIndex.Well.1  ResistivityHorizontal.Well.1  ResistivityVertical.Well.1  VsElasticOriginal.Well.1
TMP/: codemeta.json
VGG/: test_model.model  test_model_01.model  test_model_02.model  test_model_03.model  test_model_04.model
docs/: _config.yml  build_doc.sh  contribute.html  genindex.html  gmg_documentation.html  index.html  manual.html  manual_icons.html  manual_modelling.html  references.html  search.html  searchindex.js  tutorial.html
docs/.doctrees/: environment.pickle  getting_started.doctree  installation.doctree  manual_XY_data.doctree  manual_layer_attributes.doctree  manual_modelling.doctree  manual_references.doctree  manual_segy.doctree
docs/VGG_modelling/: 1.model  2.model  VGG.xy  VGG_stack.txt  bathy.txt  bathy.xy  bathy_stack.txt  tmp.model
docs/_sources/: Similiar_software_list.txt  conf.py  contribute.txt  environment.pickle  getting_started.txt  gmg_Manual.doctree  gmg_documentation.rst  installation.txt  licence.txt  manual.bib  manual.txt  manual_PF.txt  manual_XY_data.txt  manual_attribute_table.txt  manual_benchmark_examples.txt  manual_coordinate_capture.txt  manual_export_figure.txt  manual_geology.txt  manual_gravity_algorithm.txt  manual_icons.txt  manual_keyboard_shortcuts.txt  (+21 more)
gmg/: Frames.py  bott.py  dialogs.py  environment.yml  frames.py  gmg.py  gmg.yml  gmg_tmp.py  kim_and_wessel.py  model_stats.py  objects.py  plot_model.py  polygon.py  talwani_and_heirtzler.py  unpickle.ipynb
icons/: pan2.xcf
paper/: compile.sh  gmg.bib  gmg.md  paper.bib  paper.md
src/: gmg.spec  kim_and_wessel.py
tests/: test_01_bott_gravity.py
(+597 files in other folders)
