[metadata]
name = gmgpy
version = 0.1.12
author = Brook Tozer
author_email = b.tozer@gns.cri.nz
maintainer = Brook Tozer
maintainer_email = b.tozer@gns.cri.nz
description = An open source geophysical modelling GUI
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.txt
platform = any
keywords = geoscience, geophysics, potential field, gravity, magnetics, modelling, inversion, gui
url = https://github.com/btozer/gmg
project_urls = 
    Bug Tracker = https://github.com/btozer/gmg/issues
    repository = https://github.com/btozer/gmg
    Documentation = https://btozer.github.io/gmg/html/gmg_documentation.html
    Source Code = https://github.com/btozer/gmg
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
zip_safe = True
install_requires =
    matplotlib>=3.7.2
    numpy>=1.24.4
    obspy>=1.4.0
    scipy>=1.10.1
    wxpython>=4.2.0
    future>=0.18
    pygmt>=0.9.0
    pytest>=8.2.1
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
per_file_ignores =
# disable unused-imports errors on __init__.py
__init__.py: F401
   
[options.packages.find]
where = src

[options.package_data]
gmgpy =
    icons/*.png
    tutorial/*/*
    demos/*
    tests/*

[options.entry_points]
console_scripts =
    gmgpy = gmgpy.launcher:launch

[tool:pytest]
testpaths = tests
addopts = 
    --verbose
    --cov=gmgpy